WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233443
[:has() pseudo-class] Basic invalidation support
https://bugs.webkit.org/show_bug.cgi?id=233443
Summary
[:has() pseudo-class] Basic invalidation support
Antti Koivisto
Reported
2021-11-23 03:07:01 PST
Basic ruleset based invalidation
Attachments
Patch
(11.23 KB, patch)
2021-11-23 03:13 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-23 03:13:40 PST
Created
attachment 445020
[details]
Patch
EWS
Comment 2
2021-11-23 07:48:01 PST
Committed
r286135
(
244522@main
): <
https://commits.webkit.org/244522@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445020
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-23 07:48:44 PST
<
rdar://problem/85704983
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug