[:has() pseudo-class] Basic invalidation support https://bugs.webkit.org/show_bug.cgi?id=233443

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/invalidation/attribute-or-elemental-selectors-in-has-expected.txt:

Source/WebCore:

Adde RuleSet based invalidation for :has(). This covers class/attribute/pseudo-class cases.

There is also a basic optimization that limits the invalidation scope based on :has() selector
matching child/descedant/sibling.

* style/RuleFeature.cpp:
(WebCore::Style::isSiblingOrSubject):
(WebCore::Style::isHasPseudoClassMatchElement):
(WebCore::Style::RuleFeatureSet::computeNextMatchElement):
(WebCore::Style::RuleFeatureSet::computeSubSelectorMatchElement):

Add new MatchElement types for :has and compute the value. This enables automatic
creation of the required invalidation rule sets.

(WebCore::Style::RuleFeatureSet::recursivelyCollectFeaturesFromSelector):
* style/RuleFeature.h:
* style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::invalidateStyleWithMatchElement):

Traverse appropriate parent/ancestors/siblings to invalidate.



Canonical link: https://commits.webkit.org/244522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286135 268f45cc-cd09-0410-ab3c-d52691b4dbfc